# CampusGPT

./: .env.example  .gitignore  CMakeLists.txt  README.md  requirements.txt  setup.py  setup.sh  train_llama_qlora.py  train_simple.py  validate.py
config/: inference_config.yaml  training_config.yaml
data/raw/: campus_qa.jsonl
notebooks/: train_llama_colab.ipynb
src/: native.py
src/api/: __init__.py  main.py  models.py
src/api/services/: __init__.py  evaluation_service.py  inference_service.py
src/evaluation/: __init__.py  evaluators.py  metrics.py
src/quantization/: README.md  compare_bitsandbytes.py  nf4_kernels.cu  nf4_quant.h  quantize_bindings.cpp  quantize_wrapper.cpp  test_quantization.py
src/tokenizer/: README.md  benchmark_tokenizer.py  fast_tokenizer.c  fast_tokenizer.h  test_tokenizer.py  tokenizer_bindings.c
src/training/: prepare_data.py  train.py
src/utils/: __init__.py  caching.py  config.py  data_utils.py  logger.py  text_processing.py
